@@ -121,7 +121,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 2, 2, "final", 1)
-__version_time__ = "14 Mar 2025 00:02 UTC"
+__version_time__ = "16 Mar 2025 21:18 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
